--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
     "background_color": "#ffffff",
     "short_name": "Studio_MakeUp",
     "description": "Um pwa onde mostra uma tela de produtos de maquiagem",
+    "start_url": "/index.html",
     "icons": [
       {
         "src": "icons/icon-studio-40.png",
